--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,7 +5,7 @@ html {
   line-height: 1.5;
 }
 
-@media only screen and (min-width: $tablet-break) {
+@media only screen and (min-width: $laptop-break) {
   html {
     font-size: 20px;
   }
