--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,11 +11,8 @@
           {{ site.title }}
         </a>
       </h1>
-      <p class="lead only-mobile">
-        <em><a href="http://jekyllrb.com" target="_blank">{{ site.tagline }}</a></em>
-      </p>
-      <p class="lead no-mobile">
-        <em><a href="http://jekyllrb.com" target="_blank">{{ site.tagline }}</a></em>
+      <p class="lead">
+        <em><a href="http://jekyllrb.com">{{ site.tagline }}</a></em>
       </p>
       <!-- If you want the site description listed on the side bar,
            uncomment the code below. -->
@@ -43,10 +40,9 @@
     </nav>
 
     <nav class="sidebar-social">
-      <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-      <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://codepen.io/" target="_blank"><i class="fab fa-codepen"></i></a>
+      <a href="https://github.com/jpatrickdevine/hydeaway" target="_blank" title="View Repo"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/jpatrickdevine/hydeaway/archive/master.zip" title="Download Hydeaway"><i class="fas fa-download"></i></a>
+      <a href="https://fontawesome.com/icons/" target="_blank" title="Font Awesome Icons"><i class="fab fa-font-awesome-flag"></i></a>
     </nav>
 
     <p class="footer">&copy; {{ site.time | date: '%Y' }} {{ site.title }}</p>
