Add an underline style to the 'Back to Top' buttons

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,5 +9,5 @@ layout: default
 </div>
 
 <div class="only-mobile alert">
-  <a href="#">Back to Top &nbsp; <i class="fa fa-arrow-circle-up"></i></a>
+  <a href="#" class="underline">Back to Top &nbsp; <i class="fa fa-arrow-circle-up"></i></a>
 </div>
