--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
 </div>
 
 <div class="only-mobile alert">
-  <a href="{{ site.baseurl }}/blog/">
+  <a href="{{ site.baseurl }}/blog/" class="underline">
     <i class="fa fa-arrow-circle-left"></i> &nbsp; Back to Blog Feed
   </a>
 </div>
