--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -20,14 +20,18 @@ a {
   text-decoration: none;
 }
 
-a:focus {
-  text-decoration: underline;
-}
-
 @media only screen and (min-width: $tablet-break) {
   a:hover {
     text-decoration: underline;
   }
+  a:focus {
+    text-decoration: underline;
+  }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: initial;
+  margin-top: 2rem;
 }
 
 p {
